Stem by linguistics in rule bases
Also add a @language directive to stem in other languages than english.